# hilbert-c

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
shaders/: shader.fs  shader.vs
src/: main.c
